--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@
                 class="icon"
               />
               <h3>Experience</h3>
-              <p>2+ years <br />Frontend Development</p>
+              <p>Frontend Development</p>
             </div>
             <div class="details-container">
               <img
@@ -100,6 +100,7 @@
                 class="icon"
               />
               <h3>Education</h3>
+              <p>B.Sc. Bachelors Degree<br />M.Sc. Masters Degree</p>
               <p>B.Sc. Bachelors Degree<br />M.Sc. Masters Degree</p>
             </div>
           </div>
