--- a/index.html
+++ b/index.html
@@ -172,7 +172,7 @@
                 />
                 <div>
                   <h3>JavaScript</h3>
-                  <p>Basic</p>
+                  <p>Intermediate</p>
                 </div>
               </article>
               <article>
@@ -231,7 +231,7 @@
                   class="icon"
                 />
                 <div>
-                  <h3>Express JS</h3>
+                  <h3>Vite</h3>
                   <p>Intermediate</p>
                 </div>
               </article>
@@ -328,7 +328,7 @@
               </button>
               <button
                 class="btn btn-color-2 project-btn"
-                onclick="location.href='https://github.com/'"
+                onclick="location.href='https:http://127.0.0.1:5502/TSA.MOG.500.BCL2024.BCL2024-B.TSAI-MOGONO.SDFII-main/"
               >
                 Live Demo
               </button>
