fixed the live demo links abd added education

--- a/index.html
+++ b/index.html
@@ -100,18 +100,14 @@
                 class="icon"
               />
               <h3>Education</h3>
-              <p>B.Sc. Bachelors Degree<br />M.Sc. Masters Degree</p>
-              <p>B.Sc. Bachelors Degree<br />M.Sc. Masters Degree</p>
+              <p>Responsive Wed Design<br />FreeCodeCamp</p>
             </div>
           </div>
           <div class="text-container">
             <p>
-              Lorem ipsum dolor sit amet consectetur adipisicing elit. Hic quis
-              reprehenderit et laborum, rem, dolore eum quod voluptate
-              exercitationem nobis, nihil esse debitis maxime facere minus sint
-              delectus velit in eos quo officiis explicabo deleniti dignissimos.
-              Eligendi illum libero dolorum cum laboriosam corrupti quidem,
-              reiciendis ea magnam? Nulla, impedit fuga!
+              I am an entry-level developer and passionate web craftsman dedicated to breathing life into captivating digital experiences. With proficiency in HTML, CSS, and JavaScript, I thrive on solving problems through innovative tech solutions. As a critical thinker with a collaborative spirit, I continuously explore new trends and best practices to enhance my skill set.
+              
+              I am committed to transforming visions into remarkable realities with exceptional craftsmanship and unwavering dedication. My journey as a developer is driven by a love for creativity, problem-solving, and a keen interest in the latest advancements in web technologies.
             </p>
           </div>
         </div>
@@ -304,7 +300,7 @@
               </button>
               <button
                 class="btn btn-color-2 project-btn"
-                onclick="location.href='https://127.0.0.1:5502/'"
+                onclick="location.href='https://kanban-task-management-nu.vercel.app/'"
               >
                 Live Demo
               </button>
@@ -322,13 +318,13 @@
             <div class="btn-container">
               <button
                 class="btn btn-color-2 project-btn"
-                onclick="location.href='https://github.com/tsaimogono/TSA.MOG.500.BCL2024.BCL2024-B.TSAI-MOGONO.SDFII.git'"
+                onclick="location.href='https: //github.com/tsaimogono/TSA.MOG.500.BCL2024.BCL2024-B.TSAI-MOGONO.SDFII.git'"
               >
                 Github
               </button>
               <button
                 class="btn btn-color-2 project-btn"
-                onclick="location.href='https:http://127.0.0.1:5502/TSA.MOG.500.BCL2024.BCL2024-B.TSAI-MOGONO.SDFII-main/"
+              onclick="location.href='https://cache-bank-landing.netlify.app'"
               >
                 Live Demo
               </button>
